Implemented flood protection and check for active users on login

--- a/simple_oauth_password_grant.services.yml
+++ b/simple_oauth_password_grant.services.yml
@@ -1,5 +1,10 @@
 services:
   simple_oauth_password_grant.repositories.user:
     class: Drupal\simple_oauth_password_grant\Repository\UserRepository
-    arguments: ['@user.auth', '@entity_type.manager']
+    arguments: 
+      - '@user.auth'
+      - '@entity_type.manager'
+      - '@config.factory'
+      - '@flood'
+      - '@request_stack'
 
